Added back flower & changed subhead

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <div>
         <h1>Alchemy Interior Design</h1>
-        <h2>Recent Projects</h2>
+        <h2>Selection of Completed Projects</h2>
     </div>
 
     <!-- Projects Dropdown Button aligned with heading and resized -->
